Gnumeric 1.12.58

b.s.:
	* Fix long-double version of FLT.NEXTAFTER.
	* cover denormals and excessive digits for TRUNC, ROUNDDOWN,
	  ROUNDUP and ROUND.  [#770]

Morten:
	* Fix xlsx import problem with broken file.  [#763]
	* Fix ods round trip of iteration tolerance.  [#765]
	* Fix issues with long doubles in dialogs.
	* Leak fixes.

--------------------------------------------------------------------------
Gnumeric 1.12.57

Morten:
	* Fix touchpad scrolling on Wayland.  [#678]
	* Fix ods auto-filter import problem.
	* Fix xml import and export of auto-filters.
	* Fix problem with percent-of-range auto-filters with blanks.
	* New UNIQUE function.
	* New FLT.RADIX, FLT.MIN, FLT.MAX, FLT.NEXTAFTER functions (for
	  testing).
	* New experimental --with-decimal64 for base-10 math.
	* Fix sheet resize problem.
	* Fix UI problem with redo of expression entry.  [#755]
	* Accept ad-hoc clipboard format "text/plain;charset=utf-8".  [#754]

--------------------------------------------------------------------------
Gnumeric 1.12.56

Hubert Figuière:
	* Fix tooltip problem on Wayland.

Morten:
	* FLOOR, CEILING: Improve xl compatibility.  [#703]
	* Fix dependency problems with arrays.  [#725] [#647]
	* Improve clipboard pasting from firefox.  [#733]
	* Fix number-stringification for E-numbers.  [#719]
	* Improve generation of random integers.
	* Work around cairo performance problem re anting.  [#736]
	* Fix HTML export problem with underline.

--------------------------------------------------------------------------
Gnumeric 1.12.55

Morten:
	* Fix problem making new objects invisble.  [#694]

--------------------------------------------------------------------------
Gnumeric 1.12.54

John Denker:
	* Improve whitespace handling in html import.  [#671]

Morten:
	* Improve various desktop environments' icon discovery.  [#677]
	* New function ENCODEURL.  [#658]
	* New libpython configuration.  [#680]
	* Fix problem relating to sheet remove and conditional format.